--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "widgets",
   "version": "1.3.10",
-  "description": "",
+  "description": "Blockchain Visualization Widgets ============",
   "main": "dist/widgets.js",
   "directories": {
     "doc": "doc"
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bitquery/widgets"
+    "url": "git+https://github.com/bitquery/widgets.git"
   },
   "keywords": [
     "bitquery",
@@ -22,33 +22,39 @@
   "license": "ISC",
   "homepage": "https://github.com/bitquery/widgets#readme",
   "devDependencies": {
-    "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
+    "css-loader": "^3.6.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.3.0",
     "terser-webpack-plugin": "^2.3.4",
-    "vue-loader": "^15.7.2",
-    "vue-template-compiler": "^2.6.10",
-    "vue-template-loader": "^1.0.0",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9"
+    "vue-loader": "^15.10.0",
+    "vue-template-compiler": "^2.7.10",
+    "vue-template-loader": "^1.1.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "apollo-boost": "^0.4.4",
+    "apollo-boost": "^0.4.9",
     "graphiql": "^0.16.0",
-    "graphql": "^14.5.8",
+    "graphql": "^14.7.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.5.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "moment": "^2.26.0",
     "numeral": "^2.0.6",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "sass": "^1.42.1",
-    "vue": "^2.6.10",
-    "vue-google-charts": "^0.3.2",
-    "vue-i18n": "^8.15.0"
+    "vis": "^4.21.0-EOL",
+    "vue": "^2.7.10",
+    "vue-google-charts": "^0.3.3",
+    "vue-i18n": "^8.27.2"
+  },
+  "bugs": {
+    "url": "https://github.com/bitquery/widgets/issues"
   }
 }
